Add VitePress documentation and revolutionary contribution system
- Create professional documentation site with VitePress
- Add automated contribution workflow (3 commands to PR!)
- Implement template system for new tools, bug fixes, and docs
- Add dependency auto-installation and code formatting
- Create comprehensive user guides and API documentation
- Set up GitHub Actions for automatic deployment
- Add project management tools and roadmap

This release introduces the first-ever zero-friction contribution system,
allowing anyone to contribute without Git knowledge.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,19 @@ dist/
 .vscode/
 .idea/
 .npmignore
+
+# Project Management (Private)
+.project-management/
+.metrics/
+.roadmap/
+.analytics/
+
+# Local planning files
+*.local.md
+*-private.json
+planning/
+metrics-data/
+
+# VitePress
+docs/.vitepress/cache/
+docs/.vitepress/dist/
