--- a/.gitignore
+++ b/.gitignore
@@ -9,18 +9,12 @@ dist/
 .idea/
 .npmignore
 
-# Project Management (Private)
-.project-management/
-.metrics/
-.roadmap/
-.analytics/
 
-# Local planning files
-*.local.md
-*-private.json
-planning/
-metrics-data/
-
-# VitePress
+# Docs Site
 docs/.vitepress/cache/
 docs/.vitepress/dist/
+
+# Desktop Extension build artifacts
+*.dxt
+extension-build/
+CLAUDE.md
