--- a/package.json
+++ b/package.json
@@ -49,15 +49,21 @@
     "@modelcontextprotocol/sdk": "^0.5.0",
     "ai": "^4.3.17",
     "chalk": "^5.0.0",
+    "d3-shape": "^3.2.0",
     "inquirer": "^9.0.0",
-    "zod": "^3.22.0"
+    "prismjs": "^1.30.0",
+    "zod": "^3.25.76",
+    "zod-to-json-schema": "^3.24.6"
   },
   "devDependencies": {
     "@types/inquirer": "^9.0.0",
     "@types/node": "^20.0.0",
+    "archiver": "^7.0.1",
+    "mermaid": "^11.9.0",
     "tsx": "^4.0.0",
     "typescript": "^5.0.0",
-    "vitepress": "^1.6.3"
+    "vitepress": "^1.6.3",
+    "vitepress-plugin-mermaid": "^2.0.17"
   },
   "publishConfig": {
     "access": "public"
