Windows SPAWN error fixed, model name error fixed

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gemini-mcp-tool",
-  "version": "1.1.4",
+  "version": "1.1.6",
   "description": "MCP server for Gemini CLI integration",
   "type": "module",
   "main": "dist/index.js",
@@ -11,7 +11,7 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "tsc && node dist/index.js",
-    "test": "echo \"No tests yet\" && exit 0",
+    "test": "node --test tests/*.test.js",
     "lint": "tsc --noEmit",
     "contribute": "tsx src/contribute.ts",
     "prepublishOnly": "echo '⚠️  Remember to test locally first!' && npm run build",
@@ -47,16 +47,11 @@
   ],
   "dependencies": {
     "@modelcontextprotocol/sdk": "^0.5.0",
-    "ai": "^4.3.17",
-    "chalk": "^5.0.0",
-    "d3-shape": "^3.2.0",
-    "inquirer": "^9.0.0",
     "prismjs": "^1.30.0",
     "zod": "^3.25.76",
     "zod-to-json-schema": "^3.24.6"
   },
   "devDependencies": {
-    "@types/inquirer": "^9.0.0",
     "@types/node": "^20.0.0",
     "archiver": "^7.0.1",
     "mermaid": "^11.9.0",
